// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the unexpected error alert component renders as expected if there is an error and not saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    ariaCloseLabel="Close modal dialog"
    closeButtonVariation="transparent"
    closeText="Close"
    escapeExitDisabled={false}
    heading="Unable to save changes!"
    onExit={[Function]}
    role="alertdialog"
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving backing up your changes, changes made after this message appeared will be lost.
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        component="button"
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is and error and is saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    ariaCloseLabel="Close modal dialog"
    closeButtonVariation="transparent"
    closeText="Close"
    escapeExitDisabled={false}
    heading="Unable to save changes!"
    onExit={[Function]}
    role="alertdialog"
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving backing up your changes, changes made after this message appeared will be lost.
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        component="button"
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        <Spinner />
         Saving
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is no error and not saving 1`] = `
<div
  aria-live="polite"
/>
`;
